[metadata]
name = puppetdb_api
author = Igor Maravić
author_email = igor@spotify.com
home-page = https://github.com/i-maravic/puppetdb-api
version = 1.0
summary = Python wrapper for puppetDB API
requires-python = >=2.6
description-file = README.md
classifier =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7

[files]
packages = puppetdb_api

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
